# python-type-hint-exercise

./: .gitignore  .pre-commit-config.yaml  address_fetcher.py  decorators.py  example_abc.py  example_collection.py  example_final.py  example_newtype.py  example_protocol.py  example_typeddict.py  example_usage.py  http_client.py  logger.py  main.py  models.py  pyproject.toml  test_address_fetcher.py  typings.py  validator.py
.cursor/: settings.json
.github/workflows/: python-app.yml
.zed/: settings.json
address_search/: __init__.py  decorators.py  http_client.py  logger.py  main.py  result.py  validator.py
examples/: example_collection.py  example_future_annotations.py  example_mapping.py  example_protocol.py
