[project]
name = "python-type-hint-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.19.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
]
[tool.mypy]
strict = true                # 厳格モードを有効化
show_error_codes = true      # エラーコードを表示（原因特定に便利）
warn_unreachable = true      # 到達不能コードを警告

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
