[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "address_search"
version = "1.0.0"
description = "郵便番号から住所を検索するライブラリ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.20.1",
    "types-requests>=2.32.4.20250913",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.mypy]
python_version = "3.12"
strict = true                 # 厳格モードを有効化
show_error_codes = true       # エラーコードを表示（原因特定に便利）
warn_unreachable = true       # 到達不能コードを警告
ignore_missing_imports = true # サードパーティの型がない場合にエラーにしない

[tool.ruff]
exclude = ["__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".pre-commit-config.yaml"]
lint.select = ["E", "F", "W"]
line-length = 120

[tool.setuptools.package-data]
address_search = ["py.typed"]